changing structure of application

--- a/myTrello.html
+++ b/myTrello.html
@@ -20,15 +20,21 @@
 	</header>
 	<div name="todo" id="todo" class="section">
 		<h2>To do:</h2>
-		<textarea></textarea>
+		<div class="task">
+			<textarea></textarea>
+		</div>
 	</div>
 	<div name="in_progress" id="in_progress" class="section">
 		<h2>In progress:</h2>
-		<textarea></textarea>
+		<div class="task">
+			<textarea></textarea>
+		</div>
 	</div>
 	<div name="done" id="done" class="section">
 		<h2>Done:</h2>
-		<textarea></textarea>
+		<div class="task">
+			<textarea></textarea>
+		</div>
 	</div>
 	<div id="message" name="message"></div>
 	<div name="save" id="save">
