--- a/home.html
+++ b/home.html
@@ -4,6 +4,8 @@
 		<meta charset="UTF-8">
 		<title>myTrello</title>
 		<link rel="stylesheet" href="myTrello.css">
+		<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+		<script src="myTrello.js"></script>
 	</head>
 	<body>
 		<header>
