improving site construction

--- a/about.html
+++ b/about.html
@@ -4,8 +4,46 @@
 		<meta charset="UTF-8">
 		<title>About</title>
 		<link rel="stylesheet" href="myTrello.css">
+		<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+		<script src="myTrello.js"></script>
 	</head>
 	<body>
-		There will be a couple of words about Ola and Kele and their project named "myTrello" (name may change).
+		<header>
+			<a href="home.html"><h1>myTrello</h1></a>
+		</header>
+		<div class="extensions">
+			<div class="navigator">
+				Search here.
+			</div>
+			<div class="category">
+				ToDo
+				<div class="subcategory">
+					Simple lists
+				</div>
+				<div class="subcategory">
+					Extended lists
+				</div>
+			</div>
+			<div class="category">
+				Productivity
+				<div class="subcategory">
+					Some subcategory
+				</div>
+			</div>
+			<div class="category">
+				Random
+			</div>
+			<div class="category">
+				Create your own extension
+			</div>
+		</div>
+		<div class="content">
+			There will be a couple of words about Ola and Kele and their project named "myTrello" (name may change).
+		</div>
+		<footer>
+			<a href="about.html">About</a>
+			<a href="contact.html">Contact</a>
+			<a href="faq.html">FAQ</a>
+		</footer>
 	</body>
 </html>
