--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,41 @@
 		<link rel="stylesheet" href="myTrello.css">
 	</head>
 	<body>
-		Work in progress. :)
+		<header>
+			<a href="home.html"><h1>myTrello</h1></a>
+		</header>
+		<div class="extensions">
+			<div class="navigator">
+			</div>
+			<div class="category">
+				ToDo
+				<div class="subcategory">
+					Simple lists
+				</div>
+				<div class="subcategory">
+					Extended lists
+				</div>
+			</div>
+			<div class="category">
+				Productivity
+				<div class="subcategory">
+					Some subcategory
+				</div>
+			</div>
+			<div class="category">
+				Random
+			</div>
+			<div class="category">
+				Create your own extension
+			</div>
+		</div>
+		<div class="content">
+			Work in progress. :)
+		</div>
+		<footer>
+			<a href="about.html">About</a>
+			<a href="contact.html">Contact</a>
+			<a href="faq.html">FAQ</a>
+		</footer>
 	</body>
 </html>
