--- a/home.html
+++ b/home.html
@@ -9,7 +9,10 @@
 	</head>
 	<body>
 		<header>
-			You're not logged in.
+			<h1>myTrello</h1>
+			<div class="login">
+				You're not logged in.
+			</div>
 		</header>
 		<div class="extensions">
 			<div class="navigator">
