--- a/faq.html
+++ b/faq.html
@@ -6,6 +6,42 @@
 		<link rel="stylesheet" href="myTrello.css">
 	</head>
 	<body>
-		There are no questions asked as far.
+		<header>
+			<a href="home.html"><h1>myTrello</h1></a>
+		</header>
+		<div class="extensions">
+			<div class="navigator">
+				Search here.
+			</div>
+			<div class="category">
+				ToDo
+				<div class="subcategory">
+					Simple lists
+				</div>
+				<div class="subcategory">
+					Extended lists
+				</div>
+			</div>
+			<div class="category">
+				Productivity
+				<div class="subcategory">
+					Some subcategory
+				</div>
+			</div>
+			<div class="category">
+				Random
+			</div>
+			<div class="category">
+				Create your own extension
+			</div>
+		</div>
+		<div class="content">
+			There are no questions asked as far.
+		</div>
+		<footer>
+			<a href="about.html">About</a>
+			<a href="contact.html">Contact</a>
+			<a href="faq.html">FAQ</a>
+		</footer>
 	</body>
 </html>
